# test_mine

./: README.md  meson.build  org.example.testmine.json
data/: meson.build  org.example.testmine.appdata.xml.in  org.example.testmine.desktop.in  org.example.testmine.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: .clang-format  main.c  meson.build  mine_engine_v1.c  mine_engine_v1.h  mine_engine_v2.c  mine_engine_v2.h  object-hash.c  object-hash.h  object-type.h  test_mine-application.c  test_mine-application.h  test_mine-field.c  test_mine-field.h  test_mine-window.c  test_mine-window.h  test_mine-window.ui  test_mine.gresource.xml
